--- a/FoundIt/Base.lproj/Main.storyboard
+++ b/FoundIt/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gnB-pS-kkW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gnB-pS-kkW">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -46,12 +46,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XH2-6g-k65" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1440" y="-180"/>
+            <point key="canvasLocation" x="1248" y="-175"/>
         </scene>
         <!--Table View Controller - Lost-->
         <scene sceneID="c6W-Dn-Iyb">
             <objects>
-                <tableViewController id="SAx-9E-RRR" sceneMemberID="viewController">
+                <tableViewController hidesBottomBarWhenPushed="YES" id="SAx-9E-RRR" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="18o-bW-QzP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -181,12 +181,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6he-uf-VfO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2008" y="-219"/>
+            <point key="canvasLocation" x="1816" y="-175"/>
         </scene>
-        <!--View Controller-->
+        <!--Item View Controller - Item Type-->
         <scene sceneID="PFj-fe-mb3">
             <objects>
-                <viewController id="bHf-Sr-0uD" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="bHf-Sr-0uD" customClass="itemViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Umk-F9-M93"/>
                         <viewControllerLayoutGuide type="bottom" id="Saz-cL-bqh"/>
@@ -196,17 +196,24 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gIq-8V-aqJ">
-                                <rect key="frame" x="0.0" y="203" width="320" height="162"/>
+                                <rect key="frame" x="-6" y="137" width="320" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="bHf-Sr-0uD" id="kXT-YM-347"/>
+                                    <outlet property="delegate" destination="bHf-Sr-0uD" id="3TJ-w3-Y95"/>
+                                </connections>
                             </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="dZh-Uw-POd"/>
+                    <navigationItem key="navigationItem" title="Item Type" id="dZh-Uw-POd"/>
+                    <connections>
+                        <outlet property="picker" destination="gIq-8V-aqJ" id="rBQ-Iz-Otp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RYW-WW-0nJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2676" y="-219"/>
+            <point key="canvasLocation" x="2484" y="-214"/>
         </scene>
         <!--Navigation Controller - home-->
         <scene sceneID="KR7-9b-exH">
@@ -214,6 +221,7 @@
                 <navigationController definesPresentationContext="YES" id="uLj-FF-r9j" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="home" image="home" id="HJ9-xc-0fI"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="sem-hy-Ugn">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -222,7 +230,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zRi-u8-EQ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="901" y="-180"/>
+            <point key="canvasLocation" x="709" y="-175"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="sdE-Wa-umP">
@@ -242,7 +250,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eFN-zV-kTR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="351" y="124"/>
+            <point key="canvasLocation" x="159" y="129"/>
         </scene>
         <!--Navigation Controller - profile-->
         <scene sceneID="1Xh-0c-9AW">
@@ -258,7 +266,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VIX-Yj-qdQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="880" y="586"/>
+            <point key="canvasLocation" x="688" y="591"/>
         </scene>
         <!--View Controller - Profile-->
         <scene sceneID="vaq-98-O3k">
@@ -320,12 +328,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VZs-dm-V4v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1460" y="586"/>
+            <point key="canvasLocation" x="1268" y="591"/>
         </scene>
         <!--Table View Controller - Found-->
         <scene sceneID="tUm-5I-eme">
             <objects>
-                <tableViewController id="Kel-of-gfo" sceneMemberID="viewController">
+                <tableViewController hidesBottomBarWhenPushed="YES" id="Kel-of-gfo" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="zkh-fi-fl7">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -487,12 +495,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f4o-VF-HiD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2008" y="506"/>
+            <point key="canvasLocation" x="1804" y="591"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Ffs-12-m7g">
             <objects>
-                <viewController id="J1U-tP-A88" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="J1U-tP-A88" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MNE-F4-OvN"/>
                         <viewControllerLayoutGuide type="bottom" id="NIN-w4-KoB"/>
@@ -539,7 +547,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="py0-ym-KJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2664" y="506"/>
+            <point key="canvasLocation" x="2472" y="511"/>
         </scene>
     </scenes>
     <resources>
@@ -552,7 +560,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="b1M-HO-xAA"/>
-        <segue reference="E01-gi-rUf"/>
+        <segue reference="ulB-9R-kuZ"/>
+        <segue reference="Lae-Iw-Mxf"/>
     </inferredMetricsTieBreakers>
 </document>
